testing over-scroll-contain again

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,6 +126,7 @@
     background-size: 1000px 330px;
     background-attachment: fixed;
     background-position: 0 0;
+    overscroll-behavior-y: contain;
   }
 }
 
